# Ships

./: .gitignore  CMakeLists.txt
res/: planeetta.tga  ship.tga
shaders/: fragmentshader.txt  vertexshader.txt
src/: client.cpp  client.h  input.cpp  input.h  main.cpp  net.cpp  net.h  object.cpp  object.h  packet.cpp  point3.cpp  point3.h  projectile.cpp  projectile.h  render.cpp  render.h  servermain.cpp  timer.cpp  timer.h  utils.cpp  utils.h  weapon.cpp  weapon.h
src/objects/: planet.cpp  planet.h  renderfunctionsclient.cpp  renderfunctionsserver.cpp  ship.cpp  ship.h  star.cpp  star.h
src/projectiles/: laser.cpp  laser.h
src/weapons/: laser.cpp  laser.h
